Reworked subscription assignments logic
- refactoring and code improvements
- now listening for invoice.paid event and keeping track of proPaidUntil timer
- Added PRO_SUSPENDED TIER
- Updated frontend to work with suspended sub case